# national-park-builder

./: README.md
Code/: Group 17 Coding Presentation Review.xlsx  Group 17 Final Presentation.xlsx
Code/National Park Builder/: CMakeLists.txt  README.md  imgui.ini
Code/National Park Builder/Res/Shaders/BasicShaders/: Basic.vs.glsl
Code/National Park Builder/Scripts/: Build.sh  Build@Run.sh  Configure.sh  Run.sh
Code/National Park Builder/Source/: Config.h  MyWindow.h  Shared.h  bash scripts  main.cpp
Code/National Park Builder/Source/Components/Bank/: Bank.cpp  Bank.h
Code/National Park Builder/Source/Context/: Context.cpp  Context.h
Code/National Park Builder/Source/CppFx/: Application.cpp  Application.h  Scene.cpp  Scene.h  Stage.cpp  Stage.h
Code/National Park Builder/Source/CppFx/Components/: Label.cpp  Label.h  PushButton.cpp  PushButton.h  TextField.cpp  TextField.h
Code/National Park Builder/Source/CppFx/ComponentsCore/: Graphics.h  Widget.cpp  Widget.h  Window.cpp  Window.h  WindowFlags.h
Code/National Park Builder/Source/CppFx/Layouts/: HBox.h
Code/National Park Builder/Source/Math/: glm.h
Code/National Park Builder/Source/Shader/: ShaderLoader.cpp  ShaderLoader.h
Code/National Park Builder/Source/Util/: FileReader.cpp  FileReader.h
Code/National Park Builder/Source/controllers/: GameSceneController.cpp  GameSceneController.h  StartSceneController.cpp  StartSceneController.h  UIcontroller.cpp  UIcontroller.h
Code/National Park Builder/Source/models/: Building.h
Code/National Park Builder/Source/views/: GameScene.cpp  GameScene.h  StartScene.cpp  StartScene.h
Code/National Park Builder/cmake_modules/: FindGLM.cmake
Code/npb_node/: package-lock.json  package.json
Code/npb_node/public/: index.html
Code/npb_node/src/client/: App.js  Global.js
Code/npb_node/src/client/Controllers/: GameSceneController.js  HomeSceneController.js  index.js
Code/npb_node/src/client/Controllers/modules/: GuestModule.js
Code/npb_node/src/client/Models/: Buildings.js  Player.js  index.js
Code/npb_node/src/client/Views/: GameScene.js  HomeScene.js  Loader.js  index.js
Code/npb_node/src/client/WebGL/: Camera.js  index.js
Code/npb_node/src/client/WebGL/BuildSystem/: DummyBuilding.js  DummyBuildingInputHandler.js  DummyBuildingManager.js  DummyBuildingRenderer.js
Code/npb_node/src/client/WebGL/Entity/GuestsSystem/: Guest.js  GuestsManager.js  GuestsRenderer.js
Code/npb_node/src/client/WebGL/Entity/StructuresSystem/: Structure.js  StructuresManager.js  StructuresRenderer.js
Code/npb_node/src/client/WebGL/Input/: KeyBoardInput.js  MouseInput.js
Code/npb_node/src/client/WebGL/Libs/: gl-matrix.js
Code/npb_node/src/client/WebGL/Math/: NoiseGenerator.js  Vector.js  Vector2.js  Vector3.js  Vector4.js
Code/npb_node/src/client/WebGL/Model/: Material.js  Mesh.js  Model.js  Vertex.js
Code/npb_node/src/client/WebGL/ObjectLoader/: MeshesDatabase.js  ObjectLoader.js  ObjectLoaderParameters.js
Code/npb_node/src/client/WebGL/Shaders/: BasicShader.js  GuestShader.js  ObjectShader.js  Shader.js  ShaderLoader.js  StructureShader.js  TerrainShader.js  WaterShader.js
Code/npb_node/src/client/WebGL/Texture/: Texture2D.js
Code/npb_node/src/client/WebGL/Util/MousePicker/: MousePickerRay.js  MouseTerrainIntersectionPoint.js
Code/npb_node/src/client/WebGL/World/: Tessellation.js  WorldConstants.js
Code/npb_node/src/client/WebGL/World/MapSystem/: MapGenerator.js  MapManager.js  MapRenderer.js  TerrainGenerator.js
Code/npb_node/src/client/WebGL/World/Water/: WaterFramebuffer.js  WaterRenderer.js
Code/npb_node/src/client/WebGL/controllers/: ModelController.js  index.js
Code/npb_node/src/client/img/btns/: index.js
Code/npb_node/src/client/img/buildings/: index.js
Code/npb_node/src/client/styles/: app.css  gameScene.css  homeScene.css  loader.css
Code/npb_node/src/server/: index.js
Code/npb_node/src/server/controllers/: index.js  modelController.js  playerController.js  taskController.js
Code/npb_node/src/server/resources/3d/: guest.mtl  m_bench.mtl  m_bush.mtl  m_cafe.mtl  m_fence.mtl  m_lamp.mtl  m_lamp2.mtl  m_path.mtl  m_path2.mtl  m_plants.mtl  m_plants2.mtl  m_tree.mtl  m_tree2.mtl
Code/npb_node/src/server/resources/ShaderSources/: BasicFragmentShader.glsl  BasicVertexShader.glsl  GuestVertexShader.glsl  ObjectVertexShader.glsl  StructureFragmentShader.glsl  StructureVertexShader.glsl  TerrainFragmentShader.glsl  TerrainVertexShader.glsl  WaterFragmentShader.glsl  WaterVertexShader.glsl
Develop/: Group 17 Dev Proj Responses.xlsx
Minutes/: Meeting Minutes TA Note.txt  No Meeting Minutes.txt
Returned_Work/: Group17_ProjectReportDescriptionSummary_Feedback  Group_17_Scenario_1_Feedback copy 2.docx
